tenzir/tests/ast/function_double_comma.txt
error: duplicate comma
 --> ast/function_double_comma.tql:2:9
  |
2 | a = b(c,,)
  |         ^ 
  |
